translation-tool/inputs/source_meta/objects/Payu_Channel__mdt.object
<CustomObject>
    <fields>
        <fullName>Case_Origin__c</fullName>
        <label>Case Origin</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Link_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Link Button</label>
        <type>Checkbox</type>
    </fields>
    <label>Payu Channel</label>
    <pluralLabel>Payu Channels</pluralLabel>
</CustomObject>